[gd_scene load_steps=13 format=3 uid="uid://c8hbhbnw2i0dp"]

[ext_resource type="Script" uid="uid://7mo3rxg1ywgq" path="res://menu/unit_menu.gd" id="1_m0cpw"]
[ext_resource type="Texture2D" uid="uid://fb3gv1sx8a4i" path="res://unitStats/coins.png" id="2_tas3i"]
[ext_resource type="Texture2D" uid="uid://cwtyfbq4u0jqr" path="res://unitStats/amount.png" id="2_x5a1t"]
[ext_resource type="Texture2D" uid="uid://onqusivukdwl" path="res://unitStats/hp.png" id="3_tas3i"]
[ext_resource type="Texture2D" uid="uid://d0yiq8al3v7og" path="res://unitStats/attack.png" id="4_c65k7"]
[ext_resource type="Texture2D" uid="uid://dlbp5sumpwfxx" path="res://unitStats/defense.png" id="5_8epow"]
[ext_resource type="Texture2D" uid="uid://bpjm7v2dwsdxy" path="res://unitStats/damage.png" id="6_7hksg"]
[ext_resource type="Texture2D" uid="uid://25tl511ewl2q" path="res://unitStats/initiative.png" id="7_lgiss"]
[ext_resource type="Texture2D" uid="uid://dh62lkfjpm078" path="res://unitStats/movement.png" id="8_eq4oq"]
[ext_resource type="Texture2D" uid="uid://blih3sjerjofs" path="res://unitStats/ammo.png" id="9_he84s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5a1t"]
bg_color = Color(0.303233, 0.303233, 0.303233, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tas3i"]
bg_color = Color(0.252028, 0.252028, 0.252028, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.249723, 0.585348, 0.416923, 1)

[node name="UnitMenu" type="Control"]
custom_minimum_size = Vector2(810, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 700.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_m0cpw")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_right = 810.0
offset_bottom = 40.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_x5a1t")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_x5a1t")
theme_override_styles/disabled = SubResource("StyleBoxFlat_x5a1t")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_tas3i")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_tas3i")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_tas3i")
theme_override_styles/hover = SubResource("StyleBoxFlat_tas3i")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_x5a1t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x5a1t")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_x5a1t")
theme_override_styles/normal = SubResource("StyleBoxFlat_x5a1t")
toggle_mode = true
action_mode = 0
text_direction = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -365.5
offset_top = -13.0
offset_right = 365.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="stats" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CostIcon" type="TextureRect" parent="VBoxContainer/stats"]
modulate = Color(0.905882, 0.803922, 0.470588, 1)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_tas3i")
expand_mode = 2

[node name="Cost" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
modulate = Color(0.905882, 0.803922, 0.470588, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmountIcon" type="TextureRect" parent="VBoxContainer/stats"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_x5a1t")
expand_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "UNIT NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPIcon" type="TextureRect" parent="VBoxContainer/stats"]
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_tas3i")
expand_mode = 2

[node name="HPlabel" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackIcon" type="TextureRect" parent="VBoxContainer/stats"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_c65k7")
expand_mode = 2

[node name="Attack" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefenseIcon" type="TextureRect" parent="VBoxContainer/stats"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_8epow")
expand_mode = 2

[node name="Defense" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinDamageIcon" type="TextureRect" parent="VBoxContainer/stats"]
modulate = Color(0.502714, 0.674461, 0.833215, 1)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_7hksg")
expand_mode = 2

[node name="MinDamage" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxDamageIcon" type="TextureRect" parent="VBoxContainer/stats"]
modulate = Color(1, 0.666667, 0, 1)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_7hksg")
expand_mode = 2

[node name="MaxDamage" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InititativeIcon" type="TextureRect" parent="VBoxContainer/stats"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("7_lgiss")
expand_mode = 2

[node name="Inititative" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovementIcon" type="TextureRect" parent="VBoxContainer/stats"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("8_eq4oq")
expand_mode = 2

[node name="Movement" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoIcon" type="TextureRect" parent="VBoxContainer/stats"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("9_he84s")
expand_mode = 2

[node name="Ammo" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SPACE" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "        |"

[node name="EffectsIcon" type="TextureRect" parent="VBoxContainer/stats"]
unique_name_in_owner = true
visible = false
modulate = Color(0.52549, 0.294118, 0.968627, 1)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_7hksg")
expand_mode = 2

[node name="Effects" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillIcon" type="TextureRect" parent="VBoxContainer/stats"]
unique_name_in_owner = true
visible = false
modulate = Color(0.854902, 0.431373, 0.486275, 1)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_c65k7")
expand_mode = 2

[node name="Skills" type="Label" parent="VBoxContainer/stats"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "100"
horizontal_alignment = 1
vertical_alignment = 1
